--- a/pages/HomePage/register.html
+++ b/pages/HomePage/register.html
@@ -61,7 +61,7 @@
             <input type="text" name="fname" placeholder="Full Name" required>
             <button type="submit">Register</button>
         </form>
-        <p><a href="login.html">Already have an account? Login here.</a></p>
+        <p><a href="index.html">Already have an account? Login here.</a></p>
     </div>
 </body>
 </html>
